Fixes checkbox alignment

--- a/src/inspector/components/LeftColumn/LeftColumn.less
+++ b/src/inspector/components/LeftColumn/LeftColumn.less
@@ -48,7 +48,6 @@
 			padding:0;
 			margin:0;
 			flex-grow: 0;
-			height:1em;
 			align-self: center;
 		}
 	}
